--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,7 +1,3 @@
-# Bind prefix to C-Space
-unbind C-b
-set -g prefix C-Space
-
 # Vim-like key bindings for pane navigation (default uses cursor keys).
 unbind h
 bind h select-pane -L
@@ -39,6 +35,16 @@ set -g mouse on
 
 # Use colours
 set -g default-terminal "xterm-256color"
+
+# Fixes delay when pressing escape
+set -g escape-time 0
+
+# Use fish shell
+set -g default-command "fish"
+
+# Start counting at 1
+set -g base-index 1
+set -g pane-base-index 1
 
 # Reload config
 bind r source-file ~/.config/tmux/tmux.conf
